--- a/api/package.json
+++ b/api/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "axios": "^1.1.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.6.3",
     "sequelize": "^6.25.2"
   }
 }
